fixed css for research page on smaller screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,9 @@ body {
   .id-pic{
     float: none;
   }
+ .media-body{
+    overflow: visible;
+ }
 }
 
 .footer {
